// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: create 1`] = `
<AlmBindingDefinitionFormModalRenderer
  action="create"
  canSubmit={[Function]}
  isSecondInstance={false}
  onCancel={[Function]}
  onSubmit={[Function]}
/>
`;

exports[`should render correctly: edit 1`] = `
<AlmBindingDefinitionFormModalRenderer
  action="edit"
  canSubmit={[Function]}
  isSecondInstance={false}
  onCancel={[Function]}
  onSubmit={[Function]}
/>
`;
